--- a/src/App.css
+++ b/src/App.css
@@ -35,5 +35,9 @@
 }
 
 .pagination {
-  margin: 16px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 16px;
 }
